MDEV-12586 ALTER TABLE…ALGORITHM=INPLACE fails with non-constant DEFAULT values

ha_innobase::check_if_supported_inplace_alter(): For now, reject
ALGORITHM=INPLACE when a non-constant DEFAULT expression is specified
for ADD COLUMN or for changing a NULL column to NOT NULL.

Later, we should evaluate the non-constant column values in these cases.